add ability to enable force cave flyers

--- a/conf.d/arkmanager-user.cfg
+++ b/conf.d/arkmanager-user.cfg
@@ -23,6 +23,7 @@ mod_branch=Windows
 # ----------------#
 
 # ARK server flags - use arkflag_<optionname>=true
+arkflag_ForceAllowCaveFlyers=${ALLOW_CAVE_FLYERS}                   # Force the game to allow fliers in caves
 #arkflag_OnlyAdminRejoinAsSpectator=true                            # Uncomment to only allow admins to rejoin as spectator
 #arkflag_DisableDeathSpectator=true                                 # Uncomment to disable players from becoming spectators when they die
 
