--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - SERVER_PASSWORD=${SERVER_PASSWORD}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - MAX_PLAYERS=${MAX_PLAYERS}
+      - ALLOW_CAVE_FLYERS=${ALLOW_CAVE_FLYERS}
       - UPDATE_ON_START=${UPDATE_ON_START}
       - BACKUP_ON_STOP=${BACKUP_ON_STOP}
       - PRE_UPDATE_BACKUP=${PRE_UPDATE_BACKUP}
