--- a/deploy/example.env
+++ b/deploy/example.env
@@ -5,6 +5,7 @@ SERVER_MAP=TheIsland
 SERVER_PASSWORD=YouShallNotPass
 ADMIN_PASSWORD=topsecret
 MAX_PLAYERS=20
+ALLOW_CAVE_FLYERS=false
 UPDATE_ON_START=true
 BACKUP_ON_STOP=false
 PRE_UPDATE_BACKUP=true
